# raymob

./: .gitignore  .gitmodules  LICENSE  README.md  gradle.properties  settings.gradle
.github/: dependabot.yml
.github/workflows/: build.yml
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/raylib/raymob/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.c  main.cpp
app/src/main/cpp/raylib/: raylib.h  rcore.c
app/src/main/java/com/raylib/features/: Accelerometer.java  DisplayManager.java  Sensor.java  SoftKeyboard.java  Vibration.java
app/src/main/java/com/raylib/raymob/: DisplayManager.java  Features.java  NativeLoader.java  SoftKeyboard.java
app/src/main/res/values/: bools.xml  strings.xml  styles.xml
app/src/main/res/values-v27/: styles.xml
app/src/test/java/com/raylib/raymob/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
